# Robotics_Group6

./: CMakeLists.txt  README.md  bot1_demo.bash  demo.bash  frames.gv  hazard_oscillator.py  mappingpath.rviz  package.xml  run.bash  run.sh  steps run  todo.txt
.claude/: settings.local.json
.claude-flow/: CAPABILITIES.md  agents.json  config.yaml
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.swarm/: memory.db  schema.sql
com760cw2_group6/: CMakeLists.txt  package.xml
com760cw2_group6/launch/: group_6_launch.launch
com760cw2_group6/media/materials/scripts/: apocalypse.material  ground.material
com760cw2_group6/scripts/: group6bot_0_subscriber.py  hazard_oscillator.py  hazard_train.py
com760cw2_group6/scripts/logs/: monitor.csv
com760cw2_group6/scripts/ppo_hazard_tensorboard/PPO_0/: events.out.tfevents.1775564512.ubuntu-VirtualBox.30984.0
com760cw2_group6/worlds/: environment_foot.world
config/: mapping.rviz
launch/: bot0_demo.launch  bot1_demo.launch  environment.launch  generate_world.launch  group_6_launch.launch
media/materials/scripts/: gazebo.material  ground.material  pavement.material
msg/: BotAlert.msg  QLearning.msg
scripts/: Group6Bot_1_camera_view.py  Group6Bot_1_explore.py  Group6_Bot_Bug2_Algorithm.py  Group6_Q_learning_rewards.py  Group6_bug_service_client.py  Group6_bug_service_server.py  Group6_entrance_manager.py  Group6_fireball_detector.py  Group6_obstacle_alert_listener.py  Group6_obstacle_alert_publisher.py  Subscriber_Monitor_Script.py  bot0_demo.py  bot1_demo.py  bug_service_client.py  bug_service_server.py  convertingpngtoqtable.py  dqn_navigation.py  final_dqn_agent.py  fire_oscillator.py  foot_gen  frames.gv  generate_world.py  graph.py  group6_monitor.py  group6bot_0_main.py  hazard_env.py  hazard_oscillator.py  hazard_rl_model_vecnormalize.pkl  hazard_run.py  hazard_train.py  mission_node_group6.py  move_robot2_circle.py  moving_fireballs.py  path_recorder.py  q_learning_navigation.py  q_learning_rewards.py  q_learning_slam_agent.py  tunnel_flicker.py
scripts/.claude-flow/data/: pending-insights.jsonl
scripts/Round1_Training/: hazard_rl_model_round1_vecnormalize.pkl  hazard_rl_model_round1_vecnormalize.pkl.latest  hazard_train_round1.py
scripts/Round2_Training/: training_monitor.csv
scripts/Round3_Training/: training_monitor.csv
scripts/logs/: monitor.csv
scripts/ppo_hazard_tensorboard/PPO_0/: events.out.tfevents.1775582828.ubuntu-VirtualBox.4636.0
scripts/solved_policy_backup/: hazard_rl_model_SOLVED_vecnormalize.pkl
srv/: Group6GoToPoint.srv  Group6WallFollow.srv
urdf/: Group6Bot_0.urdf  Group6Bot_0.urdf.xacro  Group6Bot_1.urdf  Group6Bot_1.urdf.xacro  group6bot_0.urdf  group6bot_0.urdf.xacro
worlds/: environment_foot.world  layout.json  spawn_config.env
